fixed the image alignment issue
shifted the images into the right place

--- a/style_sheet.css
+++ b/style_sheet.css
@@ -196,6 +196,7 @@ body {
   flex-direction: column;
   max-width: 25%;
   margin-bottom: 25px;
+  align-items: center;
 }
 
 .product_1 img{
